--- a/core/res/launcher.html
+++ b/core/res/launcher.html
@@ -8,6 +8,7 @@
 
 		a {
 			text-decoration: none;
+			font-size: 20px;
 		}
 
 		a:link, a:visited {
@@ -16,6 +17,10 @@
 
 		a:hover {
     		color: #000000;
+		}
+
+		img {
+			width: 100px;
 		}
 
 		/* Place the navbar at the bottom of the page, and make it stick */
