fully moved to kcommands

--- a/mnt/us/kapps/apps/installer/res/installing.html
+++ b/mnt/us/kapps/apps/installer/res/installing.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="/core/res/base.css">
+	<meta http-equiv = "refresh" content = "1; url = $URL$" />
 </head>
 <body>
 	<table border="0" width="100%">
@@ -12,10 +13,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<table border="0" width="100%">
-		<tbody>
-			$APPS$
-		</tbody>
-	</table>
+	<h2 align="center">Installing $APP$...</h2>
+	<h2 align="center">Please be patient</h2> 
 </body>
 </html>
