--- a/mnt/us/kapps/apps/testApp/res/testApp.html
+++ b/mnt/us/kapps/apps/testApp/res/testApp.html
@@ -3,19 +3,16 @@
 	<link rel="stylesheet" href="/core/res/base.css">
 </head>
 <body>
-	<table border="0" width="100%">
+	<table>
 		<tbody>
 			<tr>
 				<td><a href="/"><h1>X</h1></a></td>
-				<td><h1 align="center">Installer</h1></td>
+				<td><h1 align="center">TestApp</h1></td>
 				<td></td>
 			</tr>
 		</tbody>
 	</table>
-	<table border="0" width="100%">
-		<tbody>
-			$APPS$
-		</tbody>
-	</table>
+
+	<h2 align="center">This is some TestApp content</h2>
 </body>
 </html>
