--- a/mnt/us/kapps/apps/uninstaller/res/list.html
+++ b/mnt/us/kapps/apps/uninstaller/res/list.html
@@ -1,15 +1,21 @@
 <html>
 <head>
-	
+	<link rel="stylesheet" href="/core/res/base.css">
 </head>
 <body>
-	<h1 align="center">Uninstaller App</h1>
-	<table border="0" width="100%">
+	<table>
+		<tbody>
+			<tr>
+				<td><a href="/"><h1>X</h1></a></td>
+				<td><h1 align="center">Uninstaller</h1></td>
+				<td></td>
+			</tr>
+		</tbody>
+	</table>
+	<table>
 		<tbody>
 			$APPS$
 		</tbody>
 	</table>
-
-<a href="/">Exit</a>
 </body>
 </html>
