--- a/mnt/us/kapps/core/res/launcher.html
+++ b/mnt/us/kapps/core/res/launcher.html
@@ -1,49 +1,6 @@
 <html>
 <head>
-	<style>
-		body {
-			margin:0;
-			padding:0;
-		}
-
-		a {
-			text-decoration: none;
-			font-size: 20px;
-		}
-
-		a:link, a:visited {
-    		color: #000000;
-		}
-
-		a:hover {
-    		color: #000000;
-		}
-
-		img {
-			width: 100px;
-		}
-
-		/* Place the navbar at the bottom of the page, and make it stick */
-		.navbar {
-			background-color: #000000;
-			overflow: hidden;
-			position: fixed;
-			bottom: 0;
-			width: 100%;
-		}
-
-		/* Style the links inside the navigation bar */
-		.navbar a {
-			float: center;
-			display: block;
-			color: #ffffff;
-			text-align: center;
-			line-height: 1em;
-			text-decoration: none;
-            font-size: 30px;
-		}
-
-	</style>
+	<link rel="stylesheet" href="core/res/base.css">
 </head>
 <body>
 	<h1 align="center">kapps</h1>
